feat: Add button to notify users when an update is available

--- a/cmd/gui/frontend/src/style.css
+++ b/cmd/gui/frontend/src/style.css
@@ -1,3 +1,4 @@
 /** biome-ignore-all lint/suspicious/noUnknownAtRules: N/A */
 @import "tailwindcss";
-@plugin 'tailwind-scrollbar';
+@plugin "tailwind-scrollbar";
+@plugin "@midudev/tailwind-animations";
